--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
     text-align: right;
     padding-top: 11em;
-    background-color: #e0ebf5; 
+    background-color: #e0ebf5;
   }
   .textColumn p {
     width: 75%;
@@ -85,23 +85,8 @@
 </head>
 <body id="sample">
   <div class="textColumn">
-    <h1>Congratulations</h1>
+    <h1>Congratulations!</h1>
     <p>Your first AWS Elastic Beanstalk Application is now running on your own dedicated environment in the AWS Cloud</p>
   </div>
-  
-  <div class="linksColumn"> 
-    <h2>What's Next?</h2>
-    <ul>
-      <li><a href="http://aws.amazon.com/elasticbeanstalk/ug/">Learn how to build, deploy and manage your own applications using AWS Elastic Beanstalk</a></li>
-      <li><a href="http://aws.amazon.com/elasticbeanstalk/concepts/">AWS Elastic Beanstalk concepts</a></li>
-      <li><a href="http://aws.amazon.com/elasticbeanstalk/deployment/">Learn how to create new application versions</a></li>
-      <li><a href="http://aws.amazon.com/elasticbeanstalk/environments/">Learn how to manage your application environments</a></li>
-    </ul>
-    <h2>Related Links</h2>
-    <ul>
-      <li><a href="https://golang.org/doc/">Go Programming Language Manual</a></li>
-    </ul>
-  </div>
-</script>
 </body>
 </html>
